# Rust-db-data-generator

./: .gitignore  Cargo.toml  README.md
src/: data_structure.rs  main.rs
src/db/: database_handler.rs  mod.rs  mongodb.rs  mysql.rs  mysql_handler.rs  table_type.rs  table_type_mysql.rs
src/models/: address.rs  client.rs  contract.rs  employee.rs  mod.rs  payment.rs  project.rs  staff.rs  task.rs  technology.rs
src/utils/: cities.txt  last_names.txt  names.txt  soft.sql  streets.txt  utils.rs
