[package]
name = "rust-db-data-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql_async = { version = "0.35.0", default-features = false, features = ["minimal"]}
mongodb = "2.8"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
lazy_static = "1.5.0"
dotenvy = "0.15.5"
futures = "0.3"